fixed alignment of avatar and edit button, made other minor styling adjustments

--- a/app/assets/stylesheets/modules/_reels.css.scss
+++ b/app/assets/stylesheets/modules/_reels.css.scss
@@ -15,9 +15,13 @@
     }
   }
 
+  .interests a {
+    color: $med-gray;
+  }
+
   .link-bar {
     width: 100%;
-    border-top: solid $med-gray 1px;
+    border-top: solid $lt-gray 1px;
     padding: 15px 0;
     position: relative;
     -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.44);
@@ -34,6 +38,14 @@
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
+    }
+
+    .col-md-8, .col-md-2 {
+      padding: 0;
+    }
+
+    .col-md-2 {
+      text-align: right
     }
 
     .avatar, h5 {
